--- a/results/Resultados hoteles.ipynb
+++ b/results/Resultados hoteles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "accommodation_type_name\n",
+       "Hotel          16\n",
+       "Apartamento     2\n",
+       "Hostel          1\n",
+       "Apartahotel     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Distribución del Tipo de Alojamiento\n",
     "tipo_alojamiento_paris = df_alojamientos_paris['accommodation_type_name'].value_counts()\n",
@@ -34,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -97,64 +113,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207.93355151515146\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Precio Promedio por Noche\n",
     "\n",
     "precio_promedio_noche_paris = df_alojamientos_paris['price_night'].mean()\n",
-    "precio_promedio_noche_paris"
+    "print(precio_promedio_noche_paris)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89.57116666666668\n"
+     ]
+    }
+   ],
    "source": [
     "precio_promedio_noche_roma = df_alojamientos_roma['price_night'].mean()\n",
-    "precio_promedio_noche_roma"
+    "print(precio_promedio_noche_roma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.9539999999999997\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Distancia Promedio\n",
     "\n",
     "distancia_promedio_paris = df_alojamientos_paris['distance'].mean()\n",
-    "distancia_promedio_paris"
+    "print(distancia_promedio_paris)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8975000000000002\n"
+     ]
+    }
+   ],
    "source": [
     "distancia_promedio_roma = df_alojamientos_roma['distance'].mean()\n",
-    "distancia_promedio_roma"
+    "print(distancia_promedio_roma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class\n",
+      "2.0    6\n",
+      "1.0    5\n",
+      "3.0    4\n",
+      "0.0    2\n",
+      "4.0    2\n",
+      "5.0    1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Distribución de Clases de Alojamiento\n",
     "distribucion_clases_paris = df_alojamientos_paris['class'].value_counts()\n",
-    "distribucion_clases_paris\n"
+    "print(distribucion_clases_paris)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "0.0    13\n",
+       "3.0     4\n",
+       "4.0     2\n",
+       "1.0     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distribucion_clases_roma = df_alojamientos_roma['class'].value_counts()\n",
     "distribucion_clases_roma"
@@ -169,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
